<resources>
    <string name="app_name">CeritaApp</string>
    <string name="register">Sign Up for CeritaApp</string>
    <string name="regist_headline">Register</string>
    <string name="login">Login</string>
    <string name="icon_app">icon app</string>
    <string name="selamat_datang_di_ceritaapp">Selamat Datang di CeritaApp</string>
    <string name="txt_masuk">Masuk</string>
    <string name="txt_daftar">Daftar</string>
    <string name="error_nama">Nama Wajib Diisi</string>
    <string name="error_email">Format Email Salah</string>
    <string name="error_password">Password Kurang Dari 8 Digit</string>
    <string name="register_story_app">Register StoryApp</string>
    <string name="new_acc_text">Buat Akun Baru ?</string>
    <string name="random">random</string>
    <string name="Logout">Logout</string>
    <string name="story_img">story_img</string>
    <string name="retry_txt">Retry</string>
    <string name="image_detail">image detail</string>
    <string name="add_stories">add_stories</string>
    <string name="preview_img">preview img</string>
    <string name="post">POST</string>
    <string name="cancel">CANCEL</string>
    <string name="galeri">GALLERY</string>
    <string name="img_warning">Empty Image</string>
    <string name="desc_warning">Description is Empty</string>
    <string name="camera">CAMERA</string>
    <string name="hint_desc">What\'s happening ?</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="stories_map_list">Story Map</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
</resources>