<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.addmenu.AddMenuActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingHorizontal="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_add_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="name"
                android:hint="@string/hint_desc"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@id/preview_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/preview_img"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/preview_img"
                app:layout_constraintBottom_toTopOf="@id/gallery_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_add_desc"
                app:srcCompat="@drawable/image_48dp_fill0_wght400_grad0_opsz48" />

            <Button
                android:id="@+id/post_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post"
                app:layout_constraintBottom_toTopOf="@id/cancel_btn"
                app:layout_constraintEnd_toEndOf="@id/cancel_btn"
                app:layout_constraintStart_toStartOf="@id/cancel_btn" />

            <Button
                android:id="@+id/gallery_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/galeri"
                app:layout_constraintBottom_toTopOf="@id/post_btn"
                app:layout_constraintEnd_toStartOf="@id/camera_btn"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/camera_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/camera"
                android:enabled="false"
                app:layout_constraintBottom_toTopOf="@id/post_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/gallery_btn" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/prg_bar"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>