<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    tools:context=".ui.activity.register.RegisterActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="45dp"
            android:contentDescription="@string/preview_img"
            android:src="@drawable/share_svgrepo_com"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register_text"
            style="@style/Headline"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:text="@string/regist_headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_icon"
            tools:alpha="100" />

        <com.edwinyosua.ceritaapp.ui.component.NameField
            android:id="@+id/edt_name"
            style="@style/CustomEditText"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_text"
            tools:alpha="100" />

        <com.edwinyosua.ceritaapp.ui.component.EmailField
            android:id="@+id/edt_email"
            style="@style/CustomEditText"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_name"
            tools:alpha="100" />

        <com.edwinyosua.ceritaapp.ui.component.PasswordField
            android:id="@+id/edt_password"
            style="@style/CustomEditText"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_email"
            tools:alpha="100" />

        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:alpha="0"
            android:text="@string/txt_daftar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_password"
            tools:alpha="100" />


        <ProgressBar
            android:id="@+id/prg_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_daftar"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>